[Actions] & [ReadMe] modified

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,8 +21,11 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Docker Up
+        run: docker compose up -f Docker/docker-compose.yaml up -d
+
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install -DskipTests
 
       - name: Run Tests
         run: mvn test
