--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,4 +68,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}/fluxypay:latest
+          tags: ghcr.io/${{ github.repository_owner | toLower }}/fluxypay:latest
+
+
