--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,6 +68,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ toLower(github.repository_owner) }}/fluxypay:latest
+          tags: ghcr.io/kushalbanik262/fluxypay:latest
 
 
